--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
     flex-direction: column;
     margin: 0;
 }
+
+/* header */
+
 .header {
     display: flex;
     background-color: #1f2937;
@@ -14,6 +17,7 @@ body {
     height: 100px;
     border-radius: 50%;
     margin-right: auto;
+    margin-left: 100px;
 }
 .header-links {
     display: flex;
@@ -22,11 +26,15 @@ body {
     align-items: center;
     font-size: 18px;
     font-weight: bold;
+    margin-right: 100px;
 }
 a {
     text-decoration: none;
     color: #e5e7eb;
 }
+
+/* hero */
+
 .main {
     display: flex;
     justify-content: center;
@@ -63,5 +71,59 @@ a {
     text-align: center;
     padding: 10px;
     border-radius: 12px;
+    font-weight: bold;
+}
+
+/* team */
+
+.title {
+    text-align: center;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    margin: 32px 32px;
+}
+.team {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 52px;
+    padding-bottom: 60px;
+}
+.info {
+    max-width: 200px;
+}
+.info img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border: 5px solid #3882f6;
+    border-radius: 10px;
+}
+.text {
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+/* quote */
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #e5e7eb;
+}
+.h2 {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    color: #1f2937;
+    margin-bottom: 0;
+}
+.p2 {
+    margin-left: 800px;
+    font-size: 18px;
     font-weight: bold;
 }
