--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@ a {
     font-size: 18px;
     color: #e5e7eb;
 }
-.button {
+.button1,
+.button2 {
     background-color: #3882f6;
     width: 110px;
     text-align: center;
@@ -126,4 +127,40 @@ a {
     margin-left: 800px;
     font-size: 18px;
     font-weight: bold;
+}
+
+/* call to action */
+
+.sign-up {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 16px;
+    margin: 80px;
+    background-color: #3882f6;
+    border-radius: 12px;
+    width: 80%;
+    color:#f9faf8;
+}
+.container2 {
+    display: flex;
+    justify-content: center;
+}
+h3 {
+    
+}
+.button2 {
+    border: 2px solid #f9faf8;
+    color:#f9faf8;
+}
+
+/* footer */
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1f2937;
+    color:#f9faf8;
+    padding: 22px;
 }
